--- a/index.html
+++ b/index.html
@@ -56,16 +56,18 @@
 }
 </style>
   <meta charset="utf-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="#000000">
   <meta name="description" content="Web site created using create-react-app">
-  <link rel="apple-touch-icon" href="/imgaes/logo.png">
-  <link rel="manifest" href="/manifest.json"><title>MetaTools</title><link href="/static/css/2.605b52b2.chunk.css" rel="stylesheet"><link href="/static/css/main.4382e6cf.chunk.css" rel="stylesheet"></head>
+  <link rel="apple-touch-icon" href="imgaes/logo.png">
+  <link rel="manifest" href="manifest.json"><title>MetaTools</title>
+	<link href="static/css/2.605b52b2.chunk.css" rel="stylesheet">
+	<link href="static/css/main.4382e6cf.chunk.css" rel="stylesheet"></head>
   <body><noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"><div class="App flex flex-col">
       <div><div class="flex justify-between items-center">
-        <div><img src="/imgaes/logo.png" alt class="w-12 h-12"></div>
+        <div><img src="imgaes/logo.png" alt class="w-12 h-12"></div>
         <div><button type="button" class="ant-btn ant-btn-primary"><span role="img" aria-label="search" class="anticon anticon-search"><svg viewBox="64 64 896 896" focusable="false" data-icon="search" width="1em" height="1em" fill="currentColor" aria-hidden="true"><path d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"></path></svg></span><span>Connect Wallet</span></button></div></div></div><div class="text-primary bg-white mx-auto max-w-900  p-4 my-6" style="width: 90%;">
       <div class="text-red-500">本批量转账仅支持BSC,BSC-TEST,RINKEBY,KOVAN网络</div><div class="text-red-500">支持自定义币种转账 输入合约地址即可 </div>
       <!-- <div class="text-red-500">无任何额外手续费</div> -->
